--- a/package.json
+++ b/package.json
@@ -1,28 +1,37 @@
 {
-  "private": true,
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.19.0",
-    "@mdx-js/react": "^1.6.22",
-    "@nuxtjs/storybook": "^4.3.2",
-    "@storybook/addon-actions": "^6.5.10",
-    "@storybook/addon-essentials": "^6.5.10",
-    "@storybook/addon-interactions": "^6.5.10",
-    "@storybook/addon-links": "^6.5.10",
-    "@storybook/builder-webpack4": "^6.5.10",
-    "@storybook/manager-webpack4": "^6.5.10",
-    "@storybook/testing-library": "^0.0.13",
-    "@storybook/vue3": "^6.5.10",
-    "babel-loader": "^8.2.5",
-    "nuxt": "3.0.0-rc.9",
-    "vue-loader": "^16.8.3"
-  }
+	"private": true,
+	"scripts": {
+		"build": "nuxt build",
+		"dev": "nuxt dev",
+		"generate": "nuxt generate",
+		"preview": "nuxt preview",
+		"postinstall": "nuxt prepare",
+		"storybook": "start-storybook -p 6006",
+		"build-storybook": "build-storybook"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.19.0",
+		"@mdx-js/react": "^1.6.22",
+		"@nuxt/postcss8": "^1.1.3",
+		"@nuxtjs/storybook": "^4.3.2",
+		"@nuxtjs/tailwindcss": "^5.3.3",
+		"@storybook/addon-actions": "^6.5.10",
+		"@storybook/addon-essentials": "^6.5.10",
+		"@storybook/addon-interactions": "^6.5.10",
+		"@storybook/addon-links": "^6.5.10",
+		"@storybook/builder-webpack4": "^6.5.10",
+		"@storybook/manager-webpack4": "^6.5.10",
+		"@storybook/testing-library": "^0.0.13",
+		"@storybook/vue3": "^6.5.10",
+		"@tailwindcss/forms": "^0.5.2",
+		"autoprefixer": "^10.4.11",
+		"babel-loader": "^8.2.5",
+		"nuxt": "3.0.0-rc.10",
+		"postcss": "^8.4.16",
+		"tailwindcss": "^3.1.8",
+		"vue-loader": "^16.8.3"
+	},
+	"dependencies": {
+		"jsvectormap": "^1.5.1"
+	}
 }
