--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
     "nuxt": "3.0.0-rc.10",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
+    "typescript": "^4.8.3",
     "vue-loader": "^16.8.3"
   },
   "dependencies": {
     "@storybook/addon-essentials": "^6.5.12",
     "jsvectormap": "^1.5.1",
-    "typescript": "^4.8.3"
+    "mapbox-gl": "^2.10.0"
   }
 }
