--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
   },
   "dependencies": {
     "@storybook/addon-essentials": "^6.5.12",
+    "@types/leaflet": "^1.8.0",
     "jsvectormap": "^1.5.1",
+    "leaflet": "^1.8.0",
     "mapbox-gl": "^2.10.0"
   }
 }
