--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@storybook/testing-library": "^0.0.13",
     "@storybook/vue3": "^6.5.12",
     "@tailwindcss/forms": "^0.5.2",
+    "@types/mapbox-gl": "^2.7.5",
     "autoprefixer": "^10.4.11",
     "babel-loader": "^8.2.5",
     "nuxt": "3.0.0-rc.10",
@@ -37,6 +38,7 @@
     "@types/leaflet": "^1.8.0",
     "jsvectormap": "^1.5.1",
     "leaflet": "^1.8.0",
-    "mapbox-gl": "^2.10.0"
+    "mapbox-gl": "^2.10.0",
+    "ol": "^7.1.0"
   }
 }
