--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/mapbox-gl": "^2.7.5",
     "autoprefixer": "^10.4.11",
     "babel-loader": "^8.2.5",
+    "google-charts": "^2.0.0",
     "jsvectormap": "^1.5.1",
     "leaflet": "^1.8.0",
     "nuxt": "3.0.0-rc.10",
@@ -37,7 +38,10 @@
   },
   "dependencies": {
     "@types/leaflet": "^1.8.0",
+    "chart.js": "^3.9.1",
     "mapbox-gl": "^2.10.0",
-    "ol": "^7.1.0"
+    "ol": "^7.1.0",
+    "vue-chartjs": "^4.1.1",
+    "vue-google-charts": "^1.1.0"
   }
 }
