--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "@types/leaflet": "^1.8.0",
     "chart.js": "^3.9.1",
+    "chartjs-chart-geo": "^3.9.0",
     "mapbox-gl": "^2.10.0",
     "ol": "^7.1.0",
     "vue-chartjs": "^4.1.1",
