--- a/package.json
+++ b/package.json
@@ -40,8 +40,11 @@
     "@types/leaflet": "^1.8.0",
     "chart.js": "^3.9.1",
     "chartjs-chart-geo": "^3.9.0",
+    "chartjs-plugin-autocolors": "^0.0.6",
+    "highcharts": "^10.2.1",
     "mapbox-gl": "^2.10.0",
     "ol": "^7.1.0",
+    "save": "^2.9.0",
     "vue-chartjs": "^4.1.1",
     "vue-google-charts": "^1.1.0"
   }
