--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@storybook/manager-webpack4": "^6.5.12",
     "@storybook/testing-library": "^0.0.13",
     "@storybook/vue3": "^6.5.12",
-    "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/forms": "^0.5.3",
     "@types/mapbox-gl": "^2.7.5",
     "autoprefixer": "^10.4.11",
     "babel-loader": "^8.2.5",
@@ -32,11 +32,15 @@
     "leaflet": "^1.8.0",
     "nuxt": "3.0.0-rc.10",
     "postcss": "^8.4.16",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.8.3",
     "vue-loader": "^16.8.3"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.3",
+    "@heroicons/vue": "^2.0.11",
     "@types/leaflet": "^1.8.0",
     "chart.js": "^3.9.1",
     "chartjs-chart-geo": "^3.9.0",
