--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.3",
-    "@heroicons/vue": "^2.0.11",
+    "@heroicons/vue": "^2.0.12",
+    "@pinia/nuxt": "^0.4.3",
     "@types/leaflet": "^1.8.0",
     "chart.js": "^3.9.1",
     "chartjs-chart-geo": "^3.9.0",
@@ -48,6 +49,7 @@
     "highcharts": "^10.2.1",
     "mapbox-gl": "^2.10.0",
     "ol": "^7.1.0",
+    "pinia": "^2.0.23",
     "save": "^2.9.0",
     "vue-chartjs": "^4.1.1",
     "vue-google-charts": "^1.1.0"
