--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"extends": "./.nuxt/tsconfig.json",
 	"compilerOptions": {
-		"skipLibCheck": true
+		"skipLibCheck": true,
+		"strict": true
 	},
 }
