--- a/package.json
+++ b/package.json
@@ -39,8 +39,14 @@
     "vue-loader": "^16.8.3"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/free-regular-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/vue-fontawesome": "^3.0.1",
     "@headlessui/vue": "^1.7.3",
     "@heroicons/vue": "^2.0.12",
+    "@nuxtjs/fontawesome": "^1.1.2",
     "@pinia/nuxt": "^0.4.3",
     "@types/leaflet": "^1.8.0",
     "chart.js": "^3.9.1",
